[project]
name = "learning-lark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lark>=1.3.1",
    "pygments>=2.19.2",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "rich>=14.2.0",
]

[tool.uv.workspace]
members = [
    "vibe3",
]
